fixed whitespace issue due to searchbar, added tests

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,12 +35,12 @@ html {
 
   @media only screen and (min-width: $min-tablet-width) {
     height: calc(100% - 45px);
-    top: 90px;
+    // top prop in activity.scss due to whitespace issue
   }
   @media only screen and (min-width: $min-desktop-width) {
     height: 100%;
     height: calc(100% - 45px);
-    top: 45px;
+    // top prop in activity.scss due to whitespace issue
   }
 }
 
